@@ -11,6 +11,10 @@ INCLUDE_DIRECTORIES("${header_path}")
 
 #AUX_SOURCE_DIRECTORY(src libcode)
 FILE(GLOB_RECURSE folder_source src/*.cpp)
+IF (BUILTIN_ACE)
+  FILE(GLOB_RECURSE folder_source_ace ace_src/*.cpp)
+  SET(folder_source ${folder_source} ${folder_source_ace})
+ENDIF (BUILTIN_ACE)
 SET(libcode ${folder_source})
 FILE(GLOB_RECURSE folder_header include/*.h)
 SOURCE_GROUP("Source Files" FILES ${folder_source})
