@@ -1,3 +1,8 @@
+2007-12-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Contact.cpp: the isValid() check was a
+	little, how should I say this, completely and utterly wrong.
+
 2007-12-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_sig/src/Image.cpp (_alloc_data): implement 
